--- a/toronto-covid19-visualization.ipynb
+++ b/toronto-covid19-visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4c017bd0",
+   "id": "36207499",
    "metadata": {},
    "source": [
     "# Visualizing COVID-19 Cases in Toronto by Age Group\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c72b836",
+   "id": "f553a8e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +124,14 @@
     "    \n",
     "# initialize the visualization\n",
     "plot_age_group('19 and younger')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "233afca8",
+   "metadata": {},
+   "source": [
+    "*Contains information licensed under the [Open Government Licence – Toronto](https://open.toronto.ca/open-data-license/).*"
    ]
   }
  ],
